Version 0.5.5
    * ...
Version 0.5.4
    * [Add] Job can be sorted by status (fail, unstable, success) - See the new button on the panel
    * [Upd] Widget: UI layout modification
    * [Fix] IDEA-86137 Thread leak in the EDT
    * [Fix] #25 The plugin should compare the configured port and the jenkins server one
    * [Fix] #26 Incorrect feedback message when clicking on the 'Test Connection' button
    * [fix] Jenkins Panel disappears when typing CTRL + F4

Version 0.5.3
    * [Fix] Widget : UI Issue on Windows and MacOS environment

Version 0.5.2
    * [Add] Widget : when clicking on the status icon, a popup is displayed with builds status summary info
    * [Add] The plugin starts up with the last selected view
    * [Upd] Improvement in handling Exception
    * [Upd] Job are loaded in background (with a waiting UI decorator)
    * [Fix] The Widget should not be duplicated when opening new Project Window
    * [Fix] Build Parameter dialog does not work

Version 0.5.1
    * [Fix] Regression : When the server url is not set (or set to a dummy url), the plugin should not try to connect
    * [Fix] Browser Panel : OneTouch Expandable should be accessible

Version 0.5.0
    * [Add] Job Tree : Search job panel (CTRL + F, F3 to search forward, SHIFT + F3 to search backward, the search feature is cyclic)
    * [Add] Jenkins Widget that displays either a red icon when the number of the broken builds > 0 or else a blue icon.
    * [Upd] Increase loading performance
    * [Fix] Connection issue when Job and Rss autorefresh are both enabled
    * [Fix] Configuration Panel: File input fields should have a validator
    * [Fix] Configuration Panel: Rename 'Password' to 'Password file'

Version 0.4.4:
    * [Add] Nested View support (1 level only)
    * [Add] Job Tree : Build Description is displayed as tooltip
    * [Upd] Plugin SDK Migration to version 107.587 (IDEA 10.5.2)
    * [Fix] Handle Http redirection

Version 0.4.3: