@@ -66,6 +66,7 @@ class DefaultSecurityClient implements SecurityClient {
 
 
     private void runMethod(String url, ResponseCollector responseCollector) {
+        httpClient.getParams().setAuthenticationPreemptive(false);
         PostMethod post = new PostMethod(url);
         setCrumbValueIfNeeded();
 
